Make sure images aren't too wide on narrow screens

--- a/main.css
+++ b/main.css
@@ -1039,23 +1039,6 @@ svg {
   }
 }
 
-/* Make sure images don't rise above adjacent text. */
-@media (max-width: 1400px) {
-  .image {
-    margin-top: 4rem;
-  }
-  @media (max-height: 600px) {
-    .image {
-      margin-top: 3rem;
-    }
-  }
-}
-@media (max-width:  850px) {
-  .image {
-    margin-top: 2rem;
-  }
-}
-
 
 /* Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -1076,6 +1059,37 @@ svg {
 }
 .u-pull-left {
   float: left;
+}
+
+
+/* Images
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Make sure images don't rise above adjacent text. */
+@media (max-width: 1400px) {
+  .image {
+    margin-top: 4rem;
+  }
+  @media (max-height: 600px) {
+    .image {
+      margin-top: 3rem;
+    }
+  }
+}
+/* Make sure images aren't too wide on narrow screens. */
+@media (max-width: 850px) {
+  .image {
+    dispay: block
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px;
+  }
+}
+@media (max-width: 400px) {
+  .image {
+    max-width: 85%;
+  }
 }
 
 
